# epson-inkjet-printer-201401w

./: README.md  epson-inkjet-printer-201401w.spec
epson-inkjet-printer-201401w-1.0.0/: AUTHORS  COPYING  COPYING.EPSON  Manual.txt  README
epson-inkjet-printer-201401w-1.0.0/include/: epcgdef.h  epmcapi.h  epmcdef.h
epson-inkjet-printer-201401w-1.0.0/lib/: libEpson_201401w.MT.so.1.0.0  libEpson_201401w.so.1.0.0
epson-inkjet-printer-201401w-1.0.0/lib64/: libEpson_201401w.MT.so.1.0.0  libEpson_201401w.so.1.0.0
epson-inkjet-printer-201401w-1.0.0/resource/: Epson_201401w.1.data  Epson_201401w.MT.1.data  Epson_201401w.MT.2.data  Epson_201401w.MT.3.data  Epson_201401w.MT.4.data
epson-inkjet-printer-201401w-1.0.0/watermark/: WEPCG00.EID  WEPCG01.EID  WEPCG02.EID  WEPCG03.EID  WEPCG04.EID  WEPCG05.EID  WEPCG06.EID  WEPCG07.EID  WEPCG08.EID  WEPCG09.EID
epson-inkjet-printer-filter-1.0.0/: COPYING  COPYING.EPSON  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
epson-inkjet-printer-filter-1.0.0/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
epson-inkjet-printer-filter-1.0.0/include/: epcgapi.h  epcgdef.h
epson-inkjet-printer-filter-1.0.0/src/: Makefile  Makefile.am  Makefile.in  debuglog.h  main.c  raster_to_epson.c  raster_to_epson.h
epson-inkjet-printer-filter-1.0.0/src/.deps/: main.Po  raster_to_epson.Po
epson-inkjet-printer-filter-1.0.0/src/filteropt/: Makefile  Makefile.am  Makefile.in  filter_option.c  filter_option.h  filter_option_define.h
epson-inkjet-printer-filter-1.0.0/src/filteropt/.deps/: filter_option.Plo
epson-inkjet-printer-filter-1.0.0/src/memory/: Makefile  Makefile.am  Makefile.in  memory.c  memory.h
epson-inkjet-printer-filter-1.0.0/src/memory/.deps/: memory.Plo
epson-inkjet-printer-filter-1.0.0/src/pagemanager/: Makefile  Makefile.am  Makefile.in  pagemanager.c  pagemanager.h  subpage.c  subpage.h  subpagemanager.c  subpagemanager.h
epson-inkjet-printer-filter-1.0.0/src/pagemanager/.deps/: pagemanager.Plo  subpage.Plo  subpagemanager.Plo
epson-inkjet-printer-filter-1.0.0/src/raster/: Makefile  Makefile.am  Makefile.in  blend.c  blend.h  fetch-pool.c  fetch-pool.h  mirror.c  mirror.h  raster-helper.c  raster-helper.h  raster.c  raster.h  reverse.c  reverse.h  scale.c  scale.h
epson-inkjet-printer-filter-1.0.0/src/raster/.deps/: blend.Plo  fetch-pool.Plo  mirror.Plo  raster-helper.Plo  raster.Plo  reverse.Plo  scale.Plo
epson-inkjet-printer-filter-1.0.0/src/raster/blendSource/: Makefile  Makefile.am  Makefile.in  blend-source.c  blend-source.h  blend-watermark-wbf-reader.c  blend-watermark.c  blend-watermark.h
epson-inkjet-printer-filter-1.0.0/src/raster/blendSource/.deps/: blend-source.Plo  blend-watermark-wbf-reader.Plo  blend-watermark.Plo
filter/: epson_inkjet_printer_filter
